clusters/apps/env/production/soho/paperless/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paperless
spec:
  hosts:
    - 'paperless.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8000
            host: paperless.soho.svc.cluster.local
          weight: 100
